--- a/css/main.css
+++ b/css/main.css
@@ -72,15 +72,15 @@ header h1{
 .image-block{
     width: 100%;
     height: 400px;
-    background-color: lightgray
-    margin-top: 50px;
+    background-color: lightgray;
+    margin-top : 50px;
     margin-bottom: 20px;
 }
 
 .cta{
     width: 200px;
     height: 40px;
-    background-color:black
+    background-color:black;
     text-align: center;
     padding-top: 6px;
     margin-top: 30px;
